# api_docs/api-spec.yml
@@ -34,6 +34,8 @@ tags:
     description: Operaciones sobre carreras
   - name: video
     description: Operaciones sobre vídeos
+  - name: comment
+    description: Operaciones sobre comentarios
 
 components:
   securitySchemes:
@@ -312,6 +314,42 @@ components:
               items:
                 $ref: '#/components/schemas/Degree'
 
+    Comment:
+      type: object
+      properties: 
+        id:
+          type: integer
+          format: int64
+        text:
+          type: string
+        timestamp:
+          type: string
+          format: date-time
+        secondsFromBeginning:
+          type: integer
+          format: int64
+      required:
+        - text
+        - timestamp
+        - secondsFromBeginning
+
+    CommentGetEmbedded:
+      type: object
+      properties:
+        _embedded:
+          type: object
+          properties:
+            comments:
+              type: array
+              items:
+                $ref: '#/components/schemas/Comment'
+
+    CommentGetResponse:
+      allOf:
+        - $ref: '#/components/schemas/GetResponse'
+        - $ref: '#/components/schemas/CommentGetEmbedded'
+        
+
 paths:
 
   #User endpoints
@@ -419,3 +457,17 @@ paths:
 
   /videos/{id}/uploader:
     $ref: 'video_endpoints.yml#/VideosIdUploader'
+
+  #Comment endpoints
+
+  /comments/add:
+    $ref: 'comment_endpoints.yml#/CommentsAdd'
+
+  /comments/{id}/commentRepliedTo:
+    $ref: 'comment_endpoints.yml#/CommentsIdCommentRepliedTo'
+
+  /comments/{id}/commentReplies:
+    $ref: 'comment_endpoints.yml#/CommentsIdCommentReplies'
+
+  /comments/search/video:
+    $ref: 'comment_endpoints.yml#/CommentsSearchByVideo'
